Adding TableView and icons.